--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: skyblue;
+  background-color: rgb(203, 230, 241);
 }
 
 .containerPoke{
@@ -26,13 +26,25 @@ body{
   margin-top: 2%;
 }
 
-#order-type{
-  width: 23%;
-  height: 25px;
+.order-type{
+  width: 30%;
+  height: 40px;
+  font-size: medium;
   background: linear-gradient(180deg, #e5fff4 82.81%, rgba(255, 255, 255, 0) 100%);
-  border-radius: 4px;
+  border-radius: 6px;
   border: none;
-  font-style: italic;
+  font-style: inherit;
+  text-transform: uppercase;
+}
+
+.order-name{
+  width: 30%;
+  height: 40px;
+  font-size: medium;
+  background: linear-gradient(180deg, #e5fff4 82.81%, rgba(255, 255, 255, 0) 100%);
+  border-radius: 6px;
+  border: none;
+  font-style: inherit;
 }
 
 .container{
