--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,18 @@
-body{
+body {
   background-color: skyblue;
 }
 
-.containerPoke{
+.containerPoke {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
-.section-search{
+.section-search {
   display: flex;
   flex-direction: row;
 }
 
-#pokeGoLogo{
+#pokeGoLogo {
   margin-left: auto;
   margin-right: auto;
   height: 44vh;
@@ -20,22 +20,26 @@ body{
   border-radius: 30px;
 }
 
-.section-search{
+.section-search {
   display: flex;
   justify-content: space-around;
   margin-top: 2%;
 }
 
-#order-type{
+#order-type {
   width: 23%;
   height: 25px;
-  background: linear-gradient(180deg, #e5fff4 82.81%, rgba(255, 255, 255, 0) 100%);
+  background: linear-gradient(
+    180deg,
+    #e5fff4 82.81%,
+    rgba(255, 255, 255, 0) 100%
+  );
   border-radius: 4px;
   border: none;
   font-style: italic;
 }
 
-.container{
+.container {
   margin-top: 30px;
   display: flex;
   flex: 1;
@@ -44,7 +48,7 @@ body{
   justify-content: center;
 }
 
-.box{
+.box {
   border: 7px solid rgb(247, 224, 18);
   border-style: outset;
   border-width: 7px;
@@ -58,5 +62,8 @@ body{
   background-color: #b6c5e0e8;
 }
 
-
-
+.statics {
+  text-align: center;
+  font-size: 25px;
+  color: rgb(55, 55, 220);
+}
