--- a/src/style.css
+++ b/src/style.css
@@ -1,27 +1,30 @@
-body{
+body {
   background-color: rgb(203, 230, 241);
+  margin: 0;
+  padding: 0;
 }
 
 h3 {
   text-transform: uppercase;
 }
-
-.containerPoke{
+#header {
+  margin: 20px;
   display: flex;
-  flex-direction: column; 
+  border-radius: 20px;
+  border: 3px solid transparent;
+  border-style: outset;
+  align-items: center;
+  justify-content: center;
 }
 
-.section-search{
-  display: flex;
-  flex-direction: row;
-}
-
-#pokeGoLogo{
+#pokeGoLogo {
   margin-left: auto;
   margin-right: auto;
   height: 44vh;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 30px;
+  display: flex;
+  flex-direction: column;
 }
 
 #numberCard {
@@ -29,70 +32,73 @@ h3 {
   color: #2f5eb7e8;
 }
 
-.section-search{
-  display: flex;
-  justify-content: space-around;
-  margin-top: 2%;
+.section-search {
   width: 100%;
+  display: flex;
   align-items: center;
+  justify-content: space-around;
+  margin-top: 4%;
   margin-bottom: 4%;
 }
 
-.order-type{
-  width: 30%;
-  height: 40px;
-  font-size: medium;
-  background: linear-gradient(180deg, #e5fff4 82.81%, rgba(255, 255, 255, 0) 100%);
-  border-radius: 6px;
-  font-style: inherit;
+.order {
+  font-family: Montserrat-Bold;
+  line-height: 1.5;
+  color:black;
   text-transform: uppercase;
 
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 10px;
-  border: 1px solid rgb(247, 224, 18);
-  border-style: outset;
-  color: #2f5eb7e8;
+  width: 250px;
+  height: 50px;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 25px;
+
+  -webkit-transition: all 0.4s;
+  -o-transition: all 0.4s;
+  -moz-transition: all 0.4s;
+  transition: all 0.4s;
+
+  
+  cursor: pointer;
+  border: none;
+  font-size: 20px;
+  outline:none;
+  background-color: rgb(247, 224, 18);
+  box-shadow:  -9px 9px 14px rgba(0, 0, 0, 0.5),
+          9px -9px 14px #ffffff;
 }
 
-.order-name{
-  width: 30%;
-  height: 40px;
-  font-size: medium;
-  background: linear-gradient(180deg, #e5fff4 82.81%, rgba(255, 255, 255, 0) 100%);
-  border-radius: 6px;
-  font-style: inherit;
-  text-transform: uppercase;
-
-  margin-left: 100px;
-  margin-right: 100px;
-  padding: 10px;
-  border: 1px solid rgb(247, 224, 18);
-  border-style: outset;
-  color: #2f5eb7e8;
-}
-
-.container{
+.container {
   width: 100%;
-  margin-top: 30px;
   display: flex;
   flex: 1;
-  flex-direction: row;
   flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .box {
   border: 7px solid rgb(247, 224, 18);
   border-style: outset;
   border-width: 7px;
-  width: 15%;
+  width: 23%;
   height: auto;
-  margin: 10px;
   padding: 15px;
   border-radius: 10px;
   text-align: center;
+  background: #fffafa;
   font-size: 15px;
-  background: #b6c5e0e8;
+  margin: 10px;
+}
+
+img{
+  height: auto;
 }
 
 .statics {
@@ -102,15 +108,3 @@ h3 {
   font-weight: bold;
   color: #2f5eb7e8;
 }
-
-#header {
-  margin: 40px;
-  padding: 20px;
-  display: flex;
-  border-radius: 20px;
-  border: 3px solid transparent;
-  align-items: center;
-  justify-content: center;
-}
-
-
