--- a/src/style.css
+++ b/src/style.css
@@ -108,3 +108,18 @@ img{
   font-weight: bold;
   color: #2f5eb7e8;
 }
+
+::-webkit-scrollbar-track {
+  background-color: rgb(203, 230, 241);
+}
+
+::-webkit-scrollbar {
+  width: 23px;
+  background: rgb(247, 224, 18);
+  
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(247, 224, 18);
+  border-radius: 40px;
+}
